[gd_scene load_steps=5 format=3 uid="uid://cuheictv0gw58"]

[ext_resource type="Script" uid="uid://dibbv8fvltoio" path="res://cell.gd" id="1_yh0nt"]
[ext_resource type="Texture2D" uid="uid://dbf6mrfjw4db4" path="res://assets/Cell.png" id="2_gwrgs"]
[ext_resource type="Texture2D" uid="uid://366hkvh1bgcw" path="res://assets/cell types.png" id="3_2yjhv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwrgs"]
size = Vector2(64, 64)

[node name="Cell" type="Node2D"]
script = ExtResource("1_yh0nt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gwrgs")
hframes = 2
frame = 1

[node name="Cell Type" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_2yjhv")
hframes = 6

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gwrgs")

[node name="DEBUG_Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "#"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
